--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "mongodb": "^3.0.1",
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {},
