--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-mongo-db": "^2.0.4",
     "mongodb": "^3.0.1",
     "muicss": "^0.9.35",
     "node-telegram-bot-api": "^0.30.0"
