--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "excel4node": "^1.3.5",
     "express": "^4.16.2",
     "express-mongo-db": "^2.0.4",
     "mongodb": "^3.0.1",
