--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.17.1",
-    "body-parser": "^1.18.2",
     "excel4node": "^1.3.5",
-    "express": "^4.16.2",
-    "express-mongo-db": "^2.0.4",
+    "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^4.0.2",
     "mongodb": "^3.0.1",
     "muicss": "^0.9.35",
     "node-telegram-bot-api": "^0.30.0"
