--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
+    "lodash": "^4.17.5",
     "mongodb": "^3.0.1",
     "muicss": "^0.9.35",
     "node-telegram-bot-api": "^0.30.0"
