--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.3.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-plugin-react": "^7.5.1",
     "node-sass": "^4.7.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
+    "dev": "webpack-dev-server --hot --open",
     "start": "node app"
   },
   "repository": {
