--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "antd": "^3.2.2",
     "axios": "^0.17.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
@@ -11,7 +12,6 @@
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.1",
-    "muicss": "^0.9.35",
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
@@ -19,6 +19,7 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.3.0",
+    "babel-plugin-import": "^1.6.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
@@ -36,6 +37,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
+    "analyze": "webpack -p --config webpack.analyze.config.js",
     "build": "webpack -p",
     "dev": "webpack-dev-server --hot --open",
     "start": "npm run build && node app"
