--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "antd": "^3.2.2",
     "axios": "^0.17.1",
     "koa": "^2.4.1",
