--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.1",
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
