--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "koa-static": "^4.0.2",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.1",
-    "node-telegram-bot-api": "^0.30.0",
+    "node-telegram-bot-api": "^0.30.0",    
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
@@ -34,8 +37,6 @@
     "eslint": "^4.16.0",
     "eslint-plugin-react": "^7.5.1",
     "node-sass": "^4.7.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
