--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-telegram-bot-api": "^0.30.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
