--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@koa/cors": "^2.2.1",
     "antd": "^3.2.2",
     "axios": "^0.17.1",
+    "express": "^4.16.3",
+    "http": "0.0.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
@@ -21,7 +23,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -37,6 +40,7 @@
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-plugin-react": "^7.5.1",
+    "koa-send": "^4.1.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
